--- a/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo.csproj
@@ -84,6 +84,8 @@
     <Content Include="scripts\repeat.js" />
     <Content Include="scripts\scopeDemo\app.js" />
     <Content Include="session6\script.js" />
+    <Content Include="session8\app.js" />
+    <Content Include="session8\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
