--- a/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo.csproj
@@ -86,6 +86,8 @@
     <Content Include="session6\script.js" />
     <Content Include="session8\app.js" />
     <Content Include="session8\index.html" />
+    <Content Include="session9\app.js" />
+    <Content Include="session9\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
