--- a/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo.csproj
@@ -74,6 +74,8 @@
     <Content Include="session10\index.html" />
     <Content Include="session11\app.js" />
     <Content Include="session11\index.html" />
+    <Content Include="session12\app.js" />
+    <Content Include="session12\index.html" />
     <Content Include="session6\hander_event.html" />
     <Content Include="intro.html" />
     <Content Include="module_controller.html" />
