--- a/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo.csproj
@@ -76,6 +76,10 @@
     <Content Include="session11\index.html" />
     <Content Include="session12\app.js" />
     <Content Include="session12\index.html" />
+    <Content Include="session13\app.js" />
+    <Content Include="session13\index.html" />
+    <Content Include="session13\listEmployeeView.html" />
+    <Content Include="session13\tableEmployeeView.html" />
     <Content Include="session6\hander_event.html" />
     <Content Include="intro.html" />
     <Content Include="module_controller.html" />
