--- a/AngularDemo/Web.config
+++ b/AngularDemo/Web.config
@@ -5,9 +5,17 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="AngularDB" connectionString="Server=ANADMIN;Database=thidu;User Id=sa;Password=123456;"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
+  <webServices>
+    <protocols>
+      <add name="HttpGet"/>
+    </protocols>
+  </webServices>
   </system.web>
   <system.codedom>
     <compilers>
