--- a/AngularDemo/AngularDemo.csproj
+++ b/AngularDemo/AngularDemo.csproj
@@ -83,6 +83,9 @@
     <Content Include="session14\app.js" />
     <Content Include="session14\Employees.asmx" />
     <Content Include="session14\employeeView.html" />
+    <Content Include="session16\app.js" />
+    <Content Include="session16\index.html" />
+    <Content Include="session16\stringService.js" />
     <Content Include="session6\hander_event.html" />
     <Content Include="intro.html" />
     <Content Include="module_controller.html" />
